--- a/feature1_src/agent_integration.ipynb
+++ b/feature1_src/agent_integration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "475d0b28",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[autogen.oai.client: 06-12 17:21:26] {363} WARNING - The API key specified is not a valid OpenAI format; it won't work with the OpenAI-hosted model.\n",
-      "[autogen.oai.client: 06-12 17:21:26] {363} WARNING - The API key specified is not a valid OpenAI format; it won't work with the OpenAI-hosted model.\n",
-      "خطا در اجرای خط لوله: Object of type datetime is not JSON serializable\n"
+      "{\n",
+      "  \"alert_id\": \"ALRT-DB-SERVER-01-0835-EXF\",\n",
+      "  \"pattern\": \"Data-Exfiltration\",\n",
+      "  \"score\": 30,\n",
+      "  \"related_event_ids\": [\n",
+      "    \"evt15\"\n",
+      "  ],\n",
+      "  \"mitre_techniques\": [\n",
+      "    {\n",
+      "      \"technique_id\": \"T1041\",\n",
+      "      \"description\": \"Exfiltration Over Command and Control Channel\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"technique_id\": \"T1048\",\n",
+      "      \"description\": \"Exfiltration Over Alternative Protocol\"\n",
+      "    }\n",
+      "  ],\n",
+      "  \"narrative\": \"این هشدار نشان می‌دهد که یک تلاش برای استخراج داده‌ها (Data Exfiltration) در سرور پایگاه داده شناسایی شده است. این رویداد در تاریخ 10 ژوئن 2025 ثبت شده و با امتیاز 30، به عنوان یک تهدید متوسط ارزیابی می‌شود. مطالعه رویدادهای مرتبط، به ما این امکان را می‌دهد که بفهمیم آیا این فعالیت‌ها به یک حمله گسترده‌تر مربوط می‌شود یا خیر. تکنیک‌های MITRE ATT&CK مربوط به این نوع از حملات شامل استخراج داده‌ها از طریق کانال‌های کنترل و فرمان (T1041) و همچنین استخراج بر روی پروتکل‌های جایگزین (T1048) می‌باشد.\"\n",
+      "}\n"
      ]
     }
    ],
@@ -22,9 +38,9 @@
     "from autogen import ConversableAgent, AssistantAgent\n",
     "from typing import List, Dict\n",
     "from correlate_events import correlate_events\n",
+    "import re\n",
     "\n",
     "# === تنظیمات LLM ===\n",
-    "# لطفاً کلید API معتبر OpenAI را وارد کنید\n",
     "llm_config = {\n",
     "    \"model\": \"gpt-4o-mini\",\n",
     "    \"api_key\": \"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\", \n",
@@ -78,9 +94,13 @@
     "        response = alert_analyzer.generate_reply(\n",
     "            messages=[{\"content\": f\"لطفاً این هشدارها را تحلیل کنید:\\n{alert_message}\", \"role\": \"user\"}]\n",
     "        )\n",
-    "        return json.loads(response)\n",
-    "    except json.JSONDecodeError:\n",
-    "        return {\"error\": \"خطا در پردازش پاسخ LLM. پاسخ دریافتی: \" + response}\n",
+    "        # Clean the response to remove Markdown code block\n",
+    "        cleaned_response = re.sub(r'```json\\n|```', '', response).strip()\n",
+    "        return json.loads(cleaned_response)\n",
+    "    except json.JSONDecodeError as e:\n",
+    "        return {\"error\": f\"خطا در پردازش پاسخ LLM. پاسخ دریافتی: {response}\"}\n",
+    "    except Exception as e:\n",
+    "        return {\"error\": f\"خطای عمومی: {str(e)}\"}\n",
     "\n",
     "# === اجرای نمونه ===\n",
     "if __name__ == \"__main__\":\n",
@@ -90,6 +110,14 @@
     "    except Exception as e:\n",
     "        print(f\"خطا در اجرای خط لوله: {str(e)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a861a7e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
