--- a/feature1_src/agent_integration.ipynb
+++ b/feature1_src/agent_integration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "475d0b28",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
     "# === تنظیمات LLM ===\n",
     "llm_config = {\n",
     "    \"model\": \"gpt-4o-mini\",\n",
-    "    \"api_key\": \"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\", \n",
+    "    \"api_key\": \"\", \n",
     "    \"api_type\": \"openai\",\n",
     "}\n",
     "\n",
