--- a/feature1_src/agent_integration.ipynb
+++ b/feature1_src/agent_integration.ipynb
@@ -43,7 +43,7 @@
     "# === تنظیمات LLM ===\n",
     "llm_config = {\n",
     "    \"model\": \"gpt-4o-mini\",\n",
-    "    \"api_key\": \"\", \n",
+    "    \"api_key\": \"your_api_key\", \n",
     "    \"api_type\": \"openai\",\n",
     "}\n",
     "\n",
